# lab-effectful-programming

./: LICENSE  README.md  lab-effectful-programming.cabal  lab8.cabal  lab9.cabal  stack.yaml
src/: Lab.hs  Lab8.hs  Lab9.hs
test/: Spec.hs
