name:                lab-effectful-programming
version:             1.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fpclass/lab-effectful-programming#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           2020 Michael B. Gale
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lab
  build-depends:
    base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:

test-suite lab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    base,
    hspec,
    QuickCheck,
    lab-effectful-programming
  ghc-options:
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpclass/lab-effectful-programming
